[project]
name = "data-acquisition-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "mpld3>=0.5.12",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
